# bevy_sokoban

./: .env  .gitignore  .ignore  Cargo.toml  readme.md
.cargo/: config
assets/: m1.txt  m2.txt  m3.txt  m4.txt
assets/textures/: box_blue.json  box_red.json  player.json
src/: actions.rs  camera_effect.rs  comments.rs  components.rs  data.rs  debug.rs  events.rs  grid.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  resources.rs  setup.rs  state.rs  systems.rs  ui.rs  事件模块.rs  加载模块.rs  地图模块.rs  数据模块.rs  状态模块.rs  界面模块.rs  系统模块.rs  组件模块.rs  网格模块.rs  菜单模块.rs  行为模块.rs  镜头模块.rs  音频模块.rs
src/loading/: paths.rs
