[package]
name = "bevy-sokoban"
version = "0.1.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2018"

[[bin]]
name = "推箱子"
path = "src/main.rs"

[lib]
name = "sokoban"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.5", features = ["default", "wav"] }
rand = "0.8"
dotenv = "0.15"
anyhow = "1"
bevy_kira_audio = { version = "0.5.1" }
bevy_asset_loader = "0.4.0"
