[package]
name = "bevy-sokoban"
version = "0.1.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"

[[bin]]
name = "sokoban"
path = "src/main.rs"

[lib]
name = "sokoban"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.8", features = ["default", "wav"] }
rand = "0.8"
dotenv = "0.15"
anyhow = "1"
bevy_kira_audio = { version = "0.12.0" }
bevy_asset_loader = { version = "^0.12.1", features = ["2d","dynamic_assets"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
