[package]
name = "bevy-sokoban"
version = "0.1.0"
authors = ["erasin <erasinoo@gmail.com>"]
edition = "2021"

[[bin]]
name = "sokoban"
path = "src/main.rs"

[lib]
name = "sokoban"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.8", features = ["default", "wav"] }
rand = "0.8"
dotenv = "0.15"
anyhow = "1"
bevy_kira_audio = { version = "0.12.0" }
bevy_asset_loader = { version = "^0.12.1", features = ["2d", "dynamic_assets"] }

# winit = { version = "0.26", default-features = false }
# image = { version = "0.4", default-features = false }

[build-dependencies]
embed-resource = "1.7"
